# Greenwashing-Detection

./: .env  .gitignore  README.md  check_metadata.py  check_tables.py  env.txt  postman_collection.json  requirements.txt  test_chat_persistence.py  test_session_flow.py
backend/: .gitignore  Dockerfile  Makefile  README.md  db.py  main.py  pyproject.toml  requirements.txt
backend/app/: .gcloudignore  config.py  db.py  init_db.py  main.py  pyproject.toml
backend/data/: reports.db
backend/downloads/: ArtigarvanResidentssaymilkfactorysmellslikerottene_910a963c.html  Cheltenhamwoman28donateshereggstohelpfamilies_0d8520a3.html  Conwyfarmhonestyboxclosedafterthievesstealeggs_ee12b90e.html  Dashcamshowsrecklessdriverrunvanoffroadinpolicecha_9fb8c2c1.html  Eastringtoneggproductionfactorywouldhouse64000free_63550cbe.html  FTAUKfirmschase38bnIndiacontractsbutchallengesloom_54d64afe.html  FireservicewarningafterhugeblazeinCannockChasewood_9852c683.html  FivechargedafterpoliceattackedwithstonesandeggsinF_de1dc77d.html  GretaThunbergjoinsclimateprotestoutsideJPMorgan_cc421c20.html  GuinnessWorldRecordgiventoLondonersforlargestscotc_eb3c808b.html  HighspeedLondonchasedriveravoidsprisonWatchNowHigh_2aa23375.html  JPMorgansJamieDimonwarnsworldfacingmostdangerousti_a2252818.html  JPMorgansettlesEpsteinlawsuitswithUSVirginIslandsa_84c7b10b.html  JPMorgansuescustomersoverviralchequefraud_fbb4299a.html  Maletortoiselayseggsleavingownersinshockafter40yea_e66ac7e0.html  Manwholedpoliceon155mphchasejailed_1a4d9236.html  MorecambeBayVolunteersfind18000sharkeggcasesonbeac_d86e41b3.html  NHSGrampiancallsformoreeggdonorsasdemandincreases_79de7159.html  Sheepdiesafterbeingchasedoffcliffbyaggressiveperso_dd40ac8c.html  SurreyPoliceappealaftermanchasedbyarmedmeninbalacl_a557aee2.html  (+4 more)
backend/gw_api/: config.py
(+292 files in other folders)
