[project]
name = "app"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "chromadb>=1.0.20",
    "cloudscraper>=1.2.71",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.116.1",
    "huggingface-hub[cli]>=0.34.4",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.1.9",
    "langdetect>=1.0.9",
    "langgraph>=0.6.6",
    "name-matching>=0.8.12",
    "onnxruntime>=1.22.1",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "pypdf>=6.0.0",
    "pypdf2>=3.0.1",
    "pyspellchecker>=0.8.3",
    "rapidocr>=3.3.1",
    "sqlalchemy>=2.0.43",
    "torch>=2.8.0",
    "transformers>=4.55.2",
    "wikirate4py>=2.0.4",
    "wordninja>=2.0.0",
]
